--- a/SurrogateRank/DESCRIPTION
+++ b/SurrogateRank/DESCRIPTION
@@ -3,6 +3,6 @@ Type: Package
 Title: Rank-Based Test to Evaluate a Surrogate Marker
 Version: 1.0
 Authors@R: c(person("Layla", "Parast", role = c("aut", "cre"), email = "parast@austin.utexas.edu"))
-Description: Uses a novel rank-based nonparametric approach to evaluate a surrogate marker in a small sample size setting. 
+Description: Uses a novel rank-based nonparametric approach to evaluate a surrogate marker in a small sample size setting. Details are described in Parast et al (2024) <doi:10.1093/biomtc/ujad035>. A tutorial for this package can be found at <https://laylaparast.com/surrogaterank>.
 License: GPL
 Imports: stats
