--- a/SurrogateRank/DESCRIPTION
+++ b/SurrogateRank/DESCRIPTION
@@ -1,8 +1,21 @@
 Package: SurrogateRank
 Type: Package
 Title: Rank-Based Test to Evaluate a Surrogate Marker
-Version: 1.0
-Authors@R: c(person("Layla", "Parast", role = c("aut", "cre"), email = "parast@austin.utexas.edu"))
-Description: Uses a novel rank-based nonparametric approach to evaluate a surrogate marker in a small sample size setting. Details are described in Parast et al (2024) <doi:10.1093/biomtc/ujad035>. A tutorial for this package can be found at <https://laylaparast.com/surrogaterank>.
+Version: 2.1
+Authors@R: c(person("Layla", "Parast", role = c("aut", "cre"), email = "parast@austin.utexas.edu"), person("Arthur", "Hughes", role = c("aut"), email = "arthur.hughes@u-bordeaux.fr"))
+Description: Uses a novel rank-based nonparametric approach to evaluate a surrogate marker
+  in a small sample size setting. Details are described in Parast et al (2024)
+  <doi:10.1093/biomtc/ujad035> and Hughes A et al (2025)
+  <doi:10.1002/sim.70241>. A tutorial for this package can be found at
+  <https://www.laylaparast.com/surrogaterank> and a Shiny App 
+  implementing the package can be found at 
+  <https://parastlab.shinyapps.io/SurrogateRankApp/>.
 License: GPL
-Imports: stats
+Encoding: UTF-8
+Imports: stats,dplyr,ggplot2,pbmcapply
+Suggests: 
+    roxygen2
+Roxygen:
+    list(markdown = TRUE)
+RoxygenNote: 7.3.2
+Config/testthat/edition: 3
