--- a/SurrogateRank/NAMESPACE
+++ b/SurrogateRank/NAMESPACE
@@ -1,2 +1,12 @@
-importFrom(stats, wilcox.test, qnorm, pnorm)
-export("delta.calculate", "est.power", "test.surrogate")
+importFrom(stats, wilcox.test, qnorm, pnorm, var, sd, cov, setNames, cor, p.adjust)
+export(delta.calculate)
+export(est.power)
+export(test.surrogate)
+export(delta.calculate.extension)
+export(rise.evaluate)
+export(rise.screen)
+export(test.surrogate.extension)
+export(test.surrogate.rise)
+import(dplyr)
+import(ggplot2)
+import(pbmcapply)
